# fastmcp-dishka

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  event-notifier.yml
examples/: fastmcp_app.py
src/fastmcp_dishka/: __init__.py  _context.py  _getters.py  _injectors.py  _middlewares.py  fastmcp.py
tests/: test_fastmcp_dishka.py
